# rpm-ring

./: .gitignore  LICENSE  Makefile  README.md  pyproject.toml  pytest.ini  sample.csv  tox.ini
src/: rpm_ring.py
tests/data/: input_sample.csv  input_with_duplicates.csv  rpm_name_parts.yml
tests/unit/: test_rpm_ring.py
